// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should handle readOnly, disabled: active 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should handle readOnly, disabled: disabled 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  disabled=""
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should handle readOnly, disabled: readOnly 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  readonly=""
  type="text"
  value=""
/>
`;

exports[`TextInput Component should render a basic component: basic component 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  data-ouia-component-id="OUIA-Generated-TextInputBase-1"
  data-ouia-component-type="PF4/TextInput"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should return an emulated onChange event: emulated event, change 1`] = `
{
  "checked": undefined,
  "currentTarget": {
    "value": "dolor sit",
  },
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "target": {},
  "value": "dolor sit",
}
`;

exports[`TextInput Component should return an emulated onClear event on escape with type search: emulated event, esc, type search 1`] = `
{
  "checked": undefined,
  "currentTarget": {
    "value": "",
  },
  "id": undefined,
  "keyCode": 27,
  "name": undefined,
  "persist": [Function],
  "target": {},
  "value": "",
}
`;

exports[`TextInput Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
{
  "checked": undefined,
  "currentTarget": {
    "value": "",
  },
  "id": undefined,
  "keyCode": 27,
  "name": undefined,
  "persist": [Function],
  "target": {},
  "value": "",
}
`;

exports[`TextInput Component should return an emulated onClear event on search clear: emulated event, clear 1`] = `
{
  "checked": undefined,
  "currentTarget": {
    "value": "",
  },
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "target": {},
  "value": "",
}
`;
